--- a/linklist.ipynb
+++ b/linklist.ipynb
@@ -2,15 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "banana-->mango-->grapes-->orange-->apple-->\n",
-      "grapes\n"
+      "banana-->mango-->grapes-->orange-->apple-->\n"
      ]
     }
    ],
@@ -137,7 +136,7 @@
     "    ll.insert_values(['banana','mango','grapes','orange','apple'])\n",
     "    ll.print()  \n",
     "    #ll.insert_at('fig',3)\n",
-    "    ll.get(3)\n",
+    "    #ll.get(3)\n",
     "    \n",
     "#testing for commit\n",
     " "
