--- a/contains_duplicate.ipynb
+++ b/contains_duplicate.ipynb
@@ -2,19 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test"
+    "from typing import List\n",
+    "\n",
+    "class solution:\n",
+    "    def iscontainsduplicate(self,nums: List[int])->bool:\n",
+    "        hashset=set()\n",
+    "\n",
+    "        for n in nums: \n",
+    "            if n in hashset:\n",
+    "                return True\n",
+    "            hashset.add(n) \n",
+    "            print (hashset)\n",
+    "        return False       \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1}\n",
+      "{1, 2}\n",
+      "{1, 2, 4}\n",
+      "{1, 2, 4, 5}\n",
+      "{1, 2, 4, 5, 6}\n",
+      "{1, 2, 4, 5, 6, 7}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=solution()\n",
+    "a.iscontainsduplicate([1,2,4,5,6,7])"
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.2 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.9"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "5edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
